--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "hardhat": "^2.0.0"
   },
   "dependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^1.0.2"
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@types/mocha": "^9.0.0",
+    "hardhat": "^2.0.0"
   }
 }
